# vinlib

./: .gitignore  .npmignore  CMakeLists.txt  README  README.md  README.npm  binding.gyp  daemon.cpp  index.js  package-lock.json  package.json  workspace.code-workspace
src/: Detector.cpp  Drawer.cpp  Extractor.cpp  Matcher.cpp  Reader.cpp  daemon.cpp  index.cpp  main.cpp
src/include/: Detector.h  Drawer.h  Extractor.h  Matcher.h  Reader.h  common.h
